# pluviometria

./: .gitignore  README.md  app.py  dados_formatados_resumo.json  data_store.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  versão 2.txt  views.py  vite.config.js
assets/: index-025e21fe.js  index-23471621.js  index-46df6426.js  index-4bf1f1ff.js  index-4d3ef1d4.js  index-70441a01.js  index-85c20511.js  index-a86cf451.js  index-d78e45f7.js  index-db306bfc.js
data/: 369.csv  dados_formatados_resumo.json  data.js  links.csv  links.txt  links_arquivos.csv  mapa.html  municipios.csv  resumo_postos_individual.csv  teste.py  todos_os_postos.rar  turf-gettingStarted.html
data/postos_solo/:  RIACHãO DE CIMA.csv  100_NOVA_RUSSAS.csv  101_NOVO_ORIENTE.csv  102_OROS.csv  103_PACAJUS.csv  104_PACATUBA.csv  105_PACOTI.csv  106_PACUJA.csv  107_PALHANO.csv  108_PALMACIA.csv  109_PARACURU.csv  10_APUIARES.csv  110_PARAIPABA.csv  111_PARAMBU.csv  112_PARAMOTI.csv  113_PEDRA_BRANCA.csv  114_PENAFORTE.csv  115_PENTECOSTE.csv  116_PEREIRO.csv  117_PIQUET_CARNEIRO.csv  118_PORANGA.csv  119_PORTEIRAS.csv  11_AQUIRAZ.csv  120_POTENGI.csv  121_QUIXADA.csv  122_QUIXELO.csv  123_QUIXERAMOBIM.csv  124_QUIXERE.csv  125_REDENCAO.csv  126_RERIUTABA.csv  127_RUSSAS.csv  128_SABOEIRO.csv  129_SANTA_QUITERIA.csv  12_ARACATI.csv  130_SANTANA_DO_ACARAU.csv  131_SANTANA_DO_CARIRI.csv  132_SAO_BENEDITO.csv  133_SAO_GONCALO_DO_AMARANTE.csv  134_SAO_JOAO_DO_JAGUARIBE.csv  135_SAO_LUIS_DO_CURU.csv  (+1956 more)
fast_one/: .coverage  .gitignore  README.md  instruções.md  pyproject.toml  requirements.txt
fast_one/fast_one/: .postgree.env  .supabse.env  app.py  app3.py  app_copy.py  components.py  dashboard.py  data_store.py  db_conection.py  df_import - copia.py  df_import.py  links.csv  models.py  requirements.txt  schemas.py  test.txt  teste_mapa.ipynb  timer.py
fast_one/temp/: postos_utilizados.csv  serie_anual_multipontos.csv  serie_diaria_multipontos.csv  serie_mensal_multipontos.csv
fast_one/tests/: test_app.py
notebooks/: Reorganizando os comandos.ipynb  map.ipynb
scripts python/: (database_insert.py  .env  conextion.py  datatest.py  db_conection.py  db_insert_data.py  gerador de links.py  gerador_de_links.py  gerar_rar.py  main_script.py  models.py  test.py
src/: App.jsx  app.py  data.js  data_store.py  main.jsx  main.py  schemas.py  views.py
src/components/: EditableCell.jsx  FilterPopover.jsx  Filters.jsx  PageSizeSelector.jsx  StatusCell.jsx  TaskTable.jsx
src/theme/: styles.js  theme.js
tests/: test_main.py
