[project]
name = "pluviometria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "hvplot>=0.11.2",
    "pandas>=2.2.3",
    "panel>=1.5.5",
    "polars>=1.20.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.0.4",
    "yapf>=0.43.0",
]
