[project]
name = "fast-one"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaak Yuri",email = "isaak.yuri@aluno.unilab.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "panel (>=1.7.5,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "supabase (>=2.17.0,<3.0.0)",
    "bokeh-fastapi (>=0.1.4,<0.2.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

run = 'fastapi dev fast_one/app.py'
run2 = 'fastapi dev fast_one/app_copy.py'

pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_one -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-include = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

